classDiagram
direction LR

class Usuario {
  +UUID id
  +String nome
  +String email
  +String senhaHash
  +PerfilUsuario perfil
  +Boolean ativo
  +DateTime criadoEm
  +DateTime atualizadoEm

  +cadastrarAdmin(data)
  +cadastrarVoluntario(data)
  +login(data)
  +buscarPorId(id)
  +listar()
  +atualizar(id, data)
  +toogleAtivo(id)
  +autenticar(email, senha)
  +alterarSenha(id, novaSenha)
  +calcularHorasOficina(oficinaId)
  +listaOficinas(id)
}

class Oficina {
  +UUID id
  +UUID usuarioAdminCriadorId
  +String titulo
  +String tema
  +String descricao
  +String instrutor
  +DateTime dataInicio
  +DateTime dataFim
  +StatusOficina status
  +Integer vagas
  +Integer numeroParticipantes
  +DateTime criadoEm
  +DateTime atualizadoEm
  

  +criarOficina(usuarioAdminCriadorId, data)
  +buscarPorId(id)
  +listar()
  +listarVoluntarios(id)
  +atualizar(data)
  +desativar(id)
  +ativar(id)
  +concluir(id)
  +calcularFrequenciaGeral(id)
}

class VoluntarioOficina {
  +UUID id
  +UUID usuarioId
  +UUID oficinaId
  +Boolean presente
  +DateTime criadoEm
  +DateTime atualizadoEm

  +voluntariar(id, usuarioId)
  +desvincularVoluntario(id, usuarioId)
  +vincularVoluntario(id, usuarioId)
  +registrarPresenca(id, usuarioId)
  +calcularHorasCumpridas(usuarioId, data)
}

class PerfilUsuario {
  <<enum>>
  ADMIN
  VOLUNTARIO
}

class StatusOficina {
  <<enum>>
  ATIVA
  INATIVA
  CONCLUIDA
}

Usuario --> PerfilUsuario
Oficina --> StatusOficina

Usuario "1" --> "0..*" VoluntarioOficina : participa
Oficina "1" --> "0..*" VoluntarioOficina : possui